<resources>
    <string name="app_name">Library</string>
    <string name="book_name">Book Name</string>
    <string name="book_price">Book Price</string>
    <string name="book_ath">Book Ath</string>
    <string name="book_type">Book Type</string>
    <string name="library_title_label">Title</string>
    <string name="library_detail_label">Details</string>
    <string name="title">Publish Date</string>
    <string name="add_book">Add Book</string>
    <string name="delete_book">Delete Book</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle_format">%1$s Books</string>
</resources>
